--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<meta name="description" content="叉叉-专业的网上购物商城，正品低价，优质便捷。囊括家电、手机、电脑、凯达、服装、居家、母婴、美妆、个护、食品、生鲜等丰富品类"/>
 	<meta name="keywords" content="网上购物,网上商城,家电,手机,电脑,服装,居家,母婴,美妆,个护,食品,生鲜,叉叉,凯达"/>
 	<title>叉叉-正品低价、品质保障！</title>
-	<link rel="stylesheet" type="text/css" href="css/normalize.min.css"/>
+	<link rel="stylesheet" type="text/css" href="css/normalize.css"/>
 	<link rel="shortcut icon" href="favicon.ico"/>
-	<link rel="stylesheet" type="text/css" href="css/base.min.css"/>
-	<link rel="stylesheet" type="text/css" href="css/index.min.css"/>
+	<link rel="stylesheet" type="text/css" href="css/base.css"/>
+	<link rel="stylesheet" type="text/css" href="css/index.css"/>
 </head>
 <body>
 	<nav id="nav">
@@ -2544,42 +2544,42 @@
 			<a class="mart-right-2" href="#">
 				<div class="mart-right-2-box">
 					<img class="mart-right-2-img" src="images/mart-right-2-1.jpg" alt="">
-					<div class="mart-right-2-title">阿斯顿发送到<br>哈哈哈哈哈哈哈哈</div>
+					<div class="mart-right-2-title">商品描述商品<br>商品描述商品描述</div>
 					<div class="mart-right-2-price">￥ 9.9</div>
 				</div>
 			</a>
 			<a class="mart-right-2" href="#">
 				<div class="mart-right-2-box">
 					<img class="mart-right-2-img" src="images/mart-right-2-2.jpg" alt="">
-					<div class="mart-right-2-title">阿斯顿发送到发发<br>哈哈哈哈哈哈哈哈</div>
+					<div class="mart-right-2-title">商品描述商品描述<br>商品描述商品描述</div>
 					<div class="mart-right-2-price">￥ 9.9</div>
 				</div>
 			</a>
 			<a class="mart-right-2" href="#">
 				<div class="mart-right-2-box">
 					<img class="mart-right-2-img" src="images/mart-right-2-3.jpg" alt="">
-					<div class="mart-right-2-title">阿斯顿发送到发撒<br>哈哈哈哈哈哈哈哈</div>
+					<div class="mart-right-2-title">商品描述商品描述<br>商品描述商品描述</div>
 					<div class="mart-right-2-price">￥ 9.9</div>
 				</div>
 			</a>
 			<a class="mart-right-2" href="#">
 				<div class="mart-right-2-box">
 					<img class="mart-right-2-img" src="images/mart-right-2-4.jpg" alt="">
-					<div class="mart-right-2-title">阿斯顿发送到发撒<br>哈哈哈哈哈哈哈哈</div>
+					<div class="mart-right-2-title">商品描述商品描述<br>商品描述商品描述</div>
 					<div class="mart-right-2-price">￥ 9.9</div>
 				</div>
 			</a>
 			<a class="mart-right-2" href="#">
 				<div class="mart-right-2-box">
 					<img class="mart-right-2-img" src="images/mart-right-2-5.jpg" alt="">
-					<div class="mart-right-2-title">阿斯顿发送到发<br>哈哈哈哈哈哈哈哈</div>
+					<div class="mart-right-2-title">商品描述商品描述<br>商品描述商品描述</div>
 					<div class="mart-right-2-price">￥ 9.9</div>
 				</div>
 			</a>
 			<a class="mart-right-2" href="#">
 				<div class="mart-right-2-box">
 					<img class="mart-right-2-img" src="images/mart-right-2-6.jpg" alt="">
-					<div class="mart-right-2-title">阿斯顿发送到发<br>哈哈哈哈哈哈哈哈</div>
+					<div class="mart-right-2-title">商品描述商品描述<br>商品描述商品描述</div>
 					<div class="mart-right-2-price">￥ 9.9</div>
 				</div>
 			</a>
@@ -2787,6 +2787,6 @@
 		</div>
 		
 	</footer>
-	<script src="js/index.min.js"></script>
+	<script src="js/index.js"></script>
 </body>
 </html>
