--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<meta name="description" content="叉叉-专业的网上购物商城，正品低价，优质便捷。囊括家电、手机、电脑、凯达、服装、居家、母婴、美妆、个护、食品、生鲜等丰富品类"/>
 	<meta name="keywords" content="网上购物,网上商城,家电,手机,电脑,服装,居家,母婴,美妆,个护,食品,生鲜,叉叉,凯达"/>
 	<title>叉叉-正品低价、品质保障！</title>
-	<link rel="stylesheet" type="text/css" href="css/normalize.css"/>
+	<link rel="stylesheet" type="text/css" href="css/normalize.min.css"/>
 	<link rel="shortcut icon" href="favicon.ico"/>
-	<link rel="stylesheet" type="text/css" href="css/base.css"/>
-	<link rel="stylesheet" type="text/css" href="css/index.css"/>
+	<link rel="stylesheet" type="text/css" href="css/base.min.css"/>
+	<link rel="stylesheet" type="text/css" href="css/index.min.css"/>
 </head>
 <body>
 	<nav id="nav">
@@ -2787,6 +2787,6 @@
 		</div>
 		
 	</footer>
-	<script src="js/index.js"></script>
+	<script src="js/index.min.js"></script>
 </body>
 </html>
